--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,15 @@
 {
+  "version": 2,
   "builds": [
     {
-      "src": "Backend/Fastapi.py",
+      "src": "api/index.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "Backend/Fastapi.py"
+      "dest": "api/index.py"
     }
   ]
 }
